# cmd/api/docs/swagger.yaml
@@ -5,13 +5,34 @@ definitions:
       bono_techo_propio:
         minimum: 0
         type: number
+      cok:
+        minimum: 0
+        type: number
+      comision_desembolso:
+        minimum: 0
+        type: number
+      comision_evaluacion:
+        minimum: 0
+        type: number
+      costos_mensuales_adicionales:
+        minimum: 0
+        type: number
       cuota_inicial:
         minimum: 0
         type: number
       dias_anio:
         type: integer
+      frecuencia:
+        enum:
+        - MENSUAL
+        - BIMESTRAL
+        - TRIMESTRAL
+        type: string
       frecuencia_pago:
         type: integer
+      gastos_administrativos:
+        minimum: 0
+        type: number
       meses_gracia:
         minimum: 0
         type: integer
@@ -22,9 +43,21 @@ definitions:
         type: string
       monto_prestamo:
         type: number
+      numero_anios:
+        minimum: 0
+        type: integer
       plazo_meses:
         type: integer
+      portes:
+        minimum: 0
+        type: number
       precio_venta:
+        type: number
+      seguro_desgravamen:
+        minimum: 0
+        type: number
+      seguro_inmueble_anual:
+        minimum: 0
         type: number
       tasa_anual:
         minimum: 0
@@ -44,12 +77,9 @@ definitions:
         - EFFECTIVE
         type: string
     required:
-    - cuota_inicial
     - dias_anio
-    - frecuencia_pago
     - moneda
     - monto_prestamo
-    - plazo_meses
     - precio_venta
     - tasa_anual
     - tipo_gracia
@@ -79,6 +109,12 @@ definitions:
     properties:
       bono_techo_propio:
         type: number
+      comision_desembolso:
+        type: number
+      comision_evaluacion:
+        type: number
+      costos_mensuales_adicionales:
+        type: number
       created_at:
         type: string
       cronograma_pagos:
@@ -89,10 +125,16 @@ definitions:
         type: number
       cuota_inicial:
         type: number
+      cuota_total:
+        type: number
+      cuotas_por_anio:
+        type: integer
       dias_anio:
         type: integer
       frecuencia_pago:
         type: integer
+      gastos_administrativos:
+        type: number
       id:
         type: integer
       meses_gracia:
@@ -101,12 +143,22 @@ definitions:
         type: string
       monto_prestamo:
         type: number
+      numero_anios:
+        type: integer
+      numero_cuotas:
+        type: integer
       plazo_meses:
         type: integer
+      portes:
+        type: number
       precio_venta:
         type: number
       saldo_financiar:
         description: Resultados calculados
+        type: number
+      seguro_desgravamen:
+        type: number
+      seguro_inmueble_anual:
         type: number
       tasa_anual:
         type: number
@@ -114,15 +166,27 @@ definitions:
         type: number
       tcea:
         type: number
+      tea:
+        type: number
       tipo_gracia:
         type: string
       tipo_tasa:
         type: string
       tir:
         type: number
+      tir_flujo:
+        type: number
+      total_cargos:
+        type: number
+      total_gastos:
+        type: number
       total_intereses:
         type: number
       total_pagado:
+        type: number
+      total_pagado_con_cargos:
+        type: number
+      total_seguros:
         type: number
       user_id:
         type: string
@@ -154,16 +218,34 @@ definitions:
     properties:
       amortizacion:
         type: number
+      costos_adicionales:
+        type: number
       cuota:
+        type: number
+      cuota_total:
         type: number
       es_periodo_gracia:
         type: boolean
+      gastos_administrativos:
+        type: number
       interes:
         type: number
+      numero_anio:
+        type: integer
       periodo:
         type: integer
+      portes:
+        type: number
       saldo_final:
         type: number
+      seguro_desgravamen:
+        type: number
+      seguro_inmueble:
+        type: number
+      tasa_periodo:
+        type: number
+      tipo_gracia:
+        type: string
     type: object
   resources.ProfileResource:
     properties:
@@ -232,13 +314,34 @@ definitions:
       bono_techo_propio:
         minimum: 0
         type: number
+      cok:
+        minimum: 0
+        type: number
+      comision_desembolso:
+        minimum: 0
+        type: number
+      comision_evaluacion:
+        minimum: 0
+        type: number
+      costos_mensuales_adicionales:
+        minimum: 0
+        type: number
       cuota_inicial:
         minimum: 0
         type: number
       dias_anio:
         type: integer
+      frecuencia:
+        enum:
+        - MENSUAL
+        - BIMESTRAL
+        - TRIMESTRAL
+        type: string
       frecuencia_pago:
         type: integer
+      gastos_administrativos:
+        minimum: 0
+        type: number
       meses_gracia:
         minimum: 0
         type: integer
@@ -249,9 +352,21 @@ definitions:
         type: string
       monto_prestamo:
         type: number
+      numero_anios:
+        minimum: 0
+        type: integer
       plazo_meses:
         type: integer
+      portes:
+        minimum: 0
+        type: number
       precio_venta:
+        type: number
+      seguro_desgravamen:
+        minimum: 0
+        type: number
+      seguro_inmueble_anual:
+        minimum: 0
         type: number
       tasa_anual:
         minimum: 0
